added thidayname to ejs file in order to render dayname too

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <!-- * below is the syntax for adding marker for ejs  -->
-    <h1>Its a <%= thisDay %>
+    <h1>Its <%=thisDayName%>. Hence its a <%= thisDay %>
     </h1>
 </body>
 
