--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,8 +10,13 @@
 
 <body>
     <!-- * below is the syntax for adding marker for ejs  -->
-    <h1>Its <%=thisDayName%>. Hence its a <%= thisDay %>
+    <%if(thisDayName==="Saturday"|| thisDayName==="Sunday"){%>
+    <h1 style="color: red;">Its <%=thisDayName%>. Hence its a <%= thisDay %>
     </h1>
+    <% }else{ %>
+        <h1 style="color: blue;">Its <%=thisDayName%>. Hence its a <%= thisDay %>
+        </h1>
+        <% } %>
 </body>
 
 </html>
