--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,31 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Todo List</title>
 </head>
 
 <body>
-    <!-- * below is the syntax for adding marker for ejs  -->
-    <h1 style="color: rgb(125, 209, 248);">
-        <%=thisDayName%>
-    </h1>
-    <ul>
+    <div class="box">
+        <!-- * below is the syntax for adding marker for ejs  -->
+        <h1 id="heading">
+            <%=listHeading%>
+        </h1>
+    </div>
+    <div class="box">
         <!-- *to print every new todo item in new list  -->
-        <% for( i=0; i < newItem.length; i++ ) { %>
-            <li>
-                <%= newItem[i] %>
-            </li>
+        <% for( let i=0; i < newItem.length; i++ ) { %>
+            <div class="item">
+                <input type="checkbox">
+                <p>
+                    <%= newItem[i] %>
+                </p>
+            </div>
             <% } %>
-    </ul>
-    <form action="/" method="post">
-        <ul>
-            <li>
-                <input type="text" name="listAdd" placeholder="type">
-                <button type="submit">Add</button>
-            </li>
-        </ul>
-    </form>
+                <form class="item" action="/" method="post">
+
+                    <input type="text" name="listAdd" placeholder="Add item" autocomplete="off">
+                    <button type="submit">+</button>
+
+                </form>
+    </div>
 
 </body>
+<footer>
+    <p>&copy; K Ameer Suhail</p>
+</footer>
 
 </html>
