--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="icons/toDoList.png" type="image/x-icon" />
     <title>Todo List</title>
 </head>
 
