--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,15 +100,29 @@ footer p {
 }
 
 #heading{
- border-radius: 50px;
+ border-radius: 30px;
 }
 
 html {
   background-image: -webkit-linear-gradient( #ffefce 1vh,#ffbf36 25vh );
   min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 button{
-  padding: 5px;
+  padding: 10px;
+}
+
+button {
+  min-height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #ffbf36;
+  color: #fff;
+  font-size: 30px;
+  border-width: 0px;
+  margin: 2px;
 }
 }
