--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,9 +110,9 @@ html {
   padding-right: 20px;
 }
 
-/* button{
-  padding: 10px;
-} */
+button{
+  padding: 7px;
+}
 
 button {
   min-height: 50px;
