--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,7 +111,7 @@ html {
 }
 
 button{
-  padding: 7px;
+  padding: 8px;
 }
 
 button {
@@ -124,5 +124,9 @@ button {
   font-size: 30px;
   border-width: 0px;
   margin: 2px;
+}
+
+.item {
+  margin: 10px;
 }
 }
