--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,29 +1,30 @@
 <!-- * below method is used so that we dont have to repeat a set of codes like header and foooter are used to be same for all page  -->
-<%- include("header"); -%> 
+<%- include("header"); -%>
 
-<div class="box">
-    <!-- * below is the syntax for adding marker for ejs  -->
-    <h1 id="heading">
-        <%=listHeading%>
-    </h1>
-</div>
-<div class="box">
-    <!-- *to print every new todo item in new list  -->
-    <% for( let i=0; i < newItem.length; i++ ) { %>
+    <div class="box">
+        <!-- * below is the syntax for adding marker for ejs  -->
+        <h1 id="heading">
+            <%=listHeading%>
+        </h1>
+    </div>
+    <div class="box">
+        <!-- *to print every new todo item in new list  -->
+        <%newItem.forEach((items) => {%>
         <div class="item">
             <input type="checkbox">
             <p>
-                <%= newItem[i] %>
+                <%= items.item %>
             </p>
         </div>
-        <% } %>
-            <form class="item" action="/" method="post">
-                <input type="text" name="listAdd" placeholder="Add item" autocomplete="off">
-                <!-- ! here dynamic value is given below in order to make the ifelse statemnt work in app.js  -->
-                <!-- ! also the value for req.body.list takes only the fst word without any space   -->  
-                <button type="submit" name="list" value=<%=listHeading %>>+</button>
-            </form>
-</div>
+        <%});%>
 
-<!-- * below method is used so that we dont have to repeat a set of codes like header and foooter are used to be same for all page  -->
-<%- include("footer"); -%> 
+        <form class="item" action="/" method="post">
+            <input type="text" name="listAdd" placeholder="Add item" autocomplete="off">
+            <!-- ! here dynamic value is given below in order to make the ifelse statemnt work in app.js  -->
+            <!-- ! also the value for req.body.list takes only the fst word without any space   -->
+            <button type="submit" name="list" value=<%=listHeading %>>+</button>
+        </form>
+    </div>
+
+    <!-- * below method is used so that we dont have to repeat a set of codes like header and foooter are used to be same for all page  -->
+    <%- include("footer"); -%>
