--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,9 +51,12 @@ p {
   color: #00204a;
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
+}
+.itemList {
+  border-bottom: 1px solid #f1f1f1;
 }
 
 button {
